envoy-bootstrap.yml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 19000
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: AUTO
                stat_prefix: ingress_http
                access_log:
                - name: envoy.access_loggers.file
                  config:
                    path: /dev/stdout
                route_config:
                  name: test
                  virtual_hosts:
                    - name: httpbin.com
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: static-cluster
                            auto_host_rewrite: true
                http_filters:
                  - name: envoy.router
  clusters:
    - name: static-cluster
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      hosts:
        - socket_address:
            address: httpbin.org
            port_value: 80
            ipv4_compat: true
